--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
   "name": "keboola-ex-youtubeapi-reporting",
-  "version": "1.0.0",
-  "description": "A simple app for getting data from Youtube Reporting Api",
+  "version": "2.0.0",
+  "description": "A Youtube Reporting API Extractor for Keboola Connection",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Radek Tomasek <radek@bluesky.pro>",
-  "license": "ISC",
+  "scripts": {},
+  "author": "Radek Tomasek <radek.tomasek@gmail.com>",
+  "license": "NONE",
   "dependencies": {
-    "babyparse": "^0.4.3",
+    "babel-polyfill": "^6.16.0",
+    "babyparse": "^0.4.6",
+    "bluebird": "^3.4.6",
     "commander": "^2.9.0",
-    "crypto": "0.0.3",
-    "fast-csv": "^0.6.0",
-    "googleapis": "^2.1.6",
-    "is-there": "^4.1.0",
-    "jsonfile": "^2.2.3",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "nconf": "^0.8.2",
-    "nconf-yaml": "^1.0.1",
-    "q": "^1.4.1"
+    "fast-csv": "^2.3.0",
+    "googleapis": "^14.1.0",
+    "is-there": "^4.3.6",
+    "jsonfile": "^2.4.0",
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
+    "nconf": "^0.8.4",
+    "promise-map-series": "^0.2.3",
+    "rimraf-promise": "^2.0.0",
+    "tmp": "0.0.30"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0"
   }
 }
