--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Radek Tomasek <radek.tomasek@gmail.com>",
   "license": "NONE",
   "dependencies": {
+    "aws-sdk": "^2.6.15",
     "babel-polyfill": "^6.16.0",
     "babyparse": "^0.4.6",
     "bluebird": "^3.4.6",
