added a low level method for handling the work with files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "babyparse": "^0.4.6",
     "bluebird": "^3.4.6",
     "commander": "^2.9.0",
+    "event-stream": "^3.3.4",
     "fast-csv": "^2.3.0",
+    "firstline": "^1.2.0",
     "googleapis": "^14.1.0",
     "is-there": "^4.3.6",
     "jsonfile": "^2.4.0",
